--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/products.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/products.html
@@ -191,12 +191,16 @@
     </script>
 
     <script>
-        const API_BASE = "http://localhost:5135";
-        const LOGIN_URL =
-            "http://127.0.0.1:5500/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html";
 
+        const isLocal =
+            location.hostname === "localhost" ||
+            location.hostname === "127.0.0.1";
+        const API_BASE = isLocal ? "http://localhost:5135" : "";
+        const LOGIN_URL = new URL(
+            "../../../dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html",
+            location.href
+        ).href;
         let allProducts = [];
-
 
         function getToken() {
             let raw = localStorage.getItem("token") || "";
