--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
@@ -383,8 +383,15 @@
 		loadLayout();
 	</script>
 	<script>
-		const API_BASE = "http://127.0.0.1:5135";
-		const LOGIN_URL = "http://127.0.0.1:5500/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html";
+		const isLocal =
+			location.hostname === "localhost" ||
+			location.hostname === "127.0.0.1";
+
+		const API_BASE = isLocal ? "http://127.0.0.1:5135" : "";
+		const LOGIN_URL = new URL(
+			"../../../dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html",
+			location.href
+		).href;
 
 		function getToken() {
 			let raw = localStorage.getItem("token") || "";
@@ -487,7 +494,7 @@
 				body: JSON.stringify(payload)
 			});
 
-			
+
 			if (res.status === 401 || res.status === 403) {
 				localStorage.removeItem("token");
 				goLogin();
@@ -560,14 +567,14 @@
 
 				await updateProviderMe(payload);
 
-	
+
 				alert("Cập nhật thành công ✅");
 
-				
+
 				loadProfilePage().catch(() => { });
 			}
 			catch (err) {
-				
+
 				console.warn("Ignored FE fetch error:", err);
 				alert("Cập nhật thành công ✅");
 			}
