--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
@@ -365,22 +365,20 @@
 	<script src="js/jquery-jvectormap.js"></script>
 	<script src="js/jvector-map.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/auth-header.js"></script>
 	<script>
 		async function loadLayout() {
-			// Load header
 			const headerRes = await fetch("header.html");
-			document.getElementById("header-container").innerHTML =
-				await headerRes.text();
+			document.getElementById("header-container").innerHTML = await headerRes.text();
 
-			// Load dashboard / sidebar
 			const dashRes = await fetch("dashboard.html");
-			document.getElementById("dashboard-container").innerHTML =
-				await dashRes.text();
+			document.getElementById("dashboard-container").innerHTML = await dashRes.text();
 
 			initSherahLayout();
-		}
 
-		loadLayout();
+			// ✅ quan trọng: gọi sau khi header đã có trong DOM
+			if (window.loadAuthToHeader) window.loadAuthToHeader();
+		}
 	</script>
 	<script>
 		const isLocal =
@@ -587,6 +585,7 @@
 
 
 		document.addEventListener("DOMContentLoaded", () => {
+			loadLayout();
 			// load data
 			loadProfilePage().catch(e => {
 				console.error(e);
