--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/upload-product.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/upload-product.html
@@ -394,6 +394,7 @@
     <script src="js/jquery-jvectormap.js"></script>
     <script src="js/jvector-map.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/auth-header.js"></script>
 
     <script>
         jQuery(document).ready(function ($) {
@@ -510,22 +511,19 @@
         }
     </script>
     <script>
-        async function loadLayout() {
-            // Load header
-            const headerRes = await fetch("header.html");
-            document.getElementById("header-container").innerHTML =
-                await headerRes.text();
+		async function loadLayout() {
+			const headerRes = await fetch("header.html");
+			document.getElementById("header-container").innerHTML = await headerRes.text();
 
-            // Load dashboard / sidebar
-            const dashRes = await fetch("dashboard.html");
-            document.getElementById("dashboard-container").innerHTML =
-                await dashRes.text();
+			const dashRes = await fetch("dashboard.html");
+			document.getElementById("dashboard-container").innerHTML = await dashRes.text();
 
-            initSherahLayout();
-        }
+			initSherahLayout();
 
-        loadLayout();
-    </script>
+			// ✅ quan trọng: gọi sau khi header đã có trong DOM
+			if (window.loadAuthToHeader) window.loadAuthToHeader();
+		}
+	</script>
     <script>
         // ===== CONFIG =====
         const isLocal =
@@ -845,6 +843,7 @@
         }
 
         document.addEventListener("DOMContentLoaded", () => {
+            loadLayout();
             bindImagePicker();
             wireSubmit();
             initCategoryDropdown();
