--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
@@ -2,7 +2,7 @@
     <div class="footer"> 
         <div class="rq-container"> 
             <div class="item1">
-                <a href="index-2.html" class="font-36-pla-reg-2"><img src="../assets/dist/img/logo.png" alt="logo" /></a>
+                <a href="index.html" class="site-logo"><img src="../assets/dist/img/logo.png" alt="logo " style="height:200px; width:auto; position: relative; top: -90px  "/></a>
                 <p>Điều tuyệt vời nhất khi đặt hàng tại Glam Corner là tùy chọn thêm "chiếc váy dự phòng" với giá 15$. Về cơ bản, bạn sẽ nhận được hai chiếc váy và chỉ cần giữ nguyên tem trên chiếc bạn quyết định không mặc. Điều này giúp tôi giảm bớt rất nhiều áp lực trong lần thuê đồ đầu tiên.</p>
                 <div class="get-touch">
                     <ul class="list-unstyled">
