fix api_base of provider and admin

--- a/FE/Admin/admin-dashboard/index.html
+++ b/FE/Admin/admin-dashboard/index.html
@@ -1032,7 +1032,7 @@
 
 	<script>
 		// ====== CONFIG: sửa lại path login nếu bạn đang dùng khác ======
-		const LOGIN_URL = "http://127.0.0.1:5500/EXE201_DressyProject/FE/login.html";
+		const LOGIN_URL = "../../dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html";
 
 		// Bạn có thể đang lưu theo key khác, nên mình check nhiều kiểu:
 		function readAuth() {
@@ -1128,7 +1128,7 @@
 			bindLogout();
 		});
 	</script>
-    <script src="auth-header.js"></script>
+	<script src="auth-header.js"></script>
 
 </body>
 
