--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
@@ -278,50 +278,51 @@
 																		<!-- Sign in Form -->
 																		<form
 																			class="sherah-wc__form-main sherah-form-main--v2 p-0"
-																			action="#" method="post">
+																			id="changePasswordForm">
 																			<div class="form-group">
 																				<label class="sherah-wc__form-label">Old
 																					Password *</label>
 																				<div class="form-group__input">
 																					<input class="sherah-wc__form-input"
-																						placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;"
-																						id="password-field"
-																						type="password" name="password"
-																						placeholder="" maxlength="8"
-																						required="required">
+																						id="oldPassword" type="password"
+																						placeholder="••••••••"
+																						 required>
 																				</div>
 																			</div>
+
 																			<div class="form-group">
 																				<label class="sherah-wc__form-label">New
 																					Password *</label>
 																				<div class="form-group__input">
 																					<input class="sherah-wc__form-input"
-																						placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;"
-																						id="password-field"
-																						type="password" name="password"
-																						placeholder="" maxlength="8"
-																						required="required">
+																						id="newPassword" type="password"
+																						placeholder="••••••••"
+																						 required>
 																				</div>
 																			</div>
+
 																			<div class="form-group">
 																				<label
 																					class="sherah-wc__form-label">Re-enter
 																					Password *</label>
 																				<div class="form-group__input">
 																					<input class="sherah-wc__form-input"
-																						placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;"
-																						id="password-field"
-																						type="password" name="password"
-																						placeholder="" maxlength="8"
-																						required="required">
+																						id="confirmPassword"
+																						type="password"
+																						placeholder="••••••••"
+																						 required>
 																				</div>
 																			</div>
+
 																			<div class="form-group mg-top-30">
-																				<button type="submit"
-																					class="sherah-btn sherah-btn__primary">Changed
-																					Password</button>
+																				<button id="btnChangePassword"
+																					type="submit"
+																					class="sherah-btn sherah-btn__primary">
+																					Changed Password
+																				</button>
 																			</div>
 																		</form>
+
 																		<!-- End Sign in Form -->
 																	</div>
 																	<div class="col-xxl-4 col-lg-6 col-md-6 col-12">
@@ -448,6 +449,7 @@
 		}
 
 		// Upload logo nếu có chọn file (endpoint nhận key "files")
+		// Upload logo -> trả về fileId (endpoint nhận key "file")
 		async function uploadLogoIfAny() {
 			const input = document.getElementById("logoFile");
 			const file = input?.files?.[0];
@@ -457,22 +459,25 @@
 			if (!isValidJwt(token)) { localStorage.removeItem("token"); goLogin(); return null; }
 
 			const fd = new FormData();
-			fd.append("files", file);
+			fd.append("file", file); // ✅ đúng key theo MediaFilesController
 
-			const res = await safeFetch(`${API_BASE}/api/uploads/images`, {
+			const res = await safeFetch(`${API_BASE}/api/media-files/upload`, {
 				method: "POST",
 				headers: { Authorization: `Bearer ${token}` },
 				body: fd
 			});
 
 			if (res.status === 401) { localStorage.removeItem("token"); goLogin(); return null; }
-			if (!res.ok) throw new Error("Upload logo thất bại: " + await res.text());
 
-			const data = await res.json().catch(() => ({}));
-			const url = (data.urls && data.urls[0]) ? data.urls[0] : null;
-			if (!url) throw new Error("Upload logo OK nhưng không nhận được url");
-			return url;
+			const json = await res.json().catch(() => ({}));
+			if (!res.ok) throw new Error(json?.message || "Upload logo thất bại");
+
+			const fileId = json?.data?.fileId;
+			if (!fileId) throw new Error("Upload OK nhưng không nhận được fileId");
+
+			return Number(fileId);
 		}
+
 
 		async function updateProviderMe(payload) {
 			const token = getToken();
@@ -503,25 +508,36 @@
 		}
 
 
+		function toAbsUrl(u) {
+			if (!u) return "";
+			if (/^https?:\/\//i.test(u)) return u;
+			if (u.startsWith("/")) return API_BASE + u;
+			return API_BASE + "/" + u;
+		}
+
 		function fillUI(auth, prov) {
 			// ---- user info (auth/me) ----
 			setText("providerFullName", auth?.fullName || "");
 			setText("providerEmail", auth?.email || "");
-			setText("providerPhone", auth?.phone || ""); // nếu BE chưa có phone => rỗng
+			setText("providerPhone", auth?.phone || "");
 
-			// ---- provider info (provider/me) ----
+			// ---- provider info ----
 			const p = prov?.data || prov;
 
-			// cover
 			setText("providerBrandName", p?.brandName || auth?.fullName || "");
 			setText("providerType", p?.providerType || "");
 			setText("providerAbout", p?.description || "");
 
-			// các field (nếu bạn còn hiển thị)
-			setText("providerStatus", p?.status || "");
-			setText("providerVerified", p?.verified === true ? "true" : (p?.verified === false ? "false" : ""));
+			// ✅ Logo: ưu tiên prov.logoUrl (nằm ngoài data), fallback logoFileId
+			const logoUrlFromRoot = prov?.logoUrl; // 👈 quan trọng
+			const logoFileId = p?.logoFileId ?? p?.LogoFileId;
 
-			setImg("providerLogo", p?.logoUrl);
+			const finalLogoUrl =
+				logoUrlFromRoot
+					? toAbsUrl(logoUrlFromRoot)
+					: (logoFileId ? `${API_BASE}/api/media-files/${logoFileId}` : null);
+
+			setImg("providerLogo", finalLogoUrl);
 
 			// fill form
 			const brand = document.getElementById("brandNameInput");
@@ -533,8 +549,9 @@
 			if (desc) desc.value = p?.description || "";
 
 			const hint = document.getElementById("logoHint");
-			if (hint) hint.textContent = p?.logoUrl ? ("Current: " + p.logoUrl) : "No logo yet";
+			if (hint) hint.textContent = finalLogoUrl ? ("Current: " + finalLogoUrl) : "No logo yet";
 		}
+
 
 		async function loadProfilePage() {
 			const [auth, prov] = await Promise.all([fetchAuthMe(), fetchProviderMe()]);
@@ -554,32 +571,114 @@
 				const providerType = document.getElementById("providerTypeInput").value;
 				const description = document.getElementById("descriptionInput").value.trim();
 
-				const logoUrl = await uploadLogoIfAny(); // có thể null
+				const logoFileId = await uploadLogoIfAny(); // trả về number hoặc null
 
 				const payload = {
 					brandName,
 					providerType,
 					description
 				};
-				if (logoUrl !== null) payload.logoUrl = logoUrl;
+
+				// ✅ chỉ gửi field logoFileId khi user có chọn file
+				if (logoFileId !== null) payload.logoFileId = logoFileId;
 
 				await updateProviderMe(payload);
-
-
-				alert("Cập nhật thành công ✅");
-
-
+				alert("Cập nhật thành công ");
 				loadProfilePage().catch(() => { });
 			}
 			catch (err) {
 
 				console.warn("Ignored FE fetch error:", err);
-				alert("Cập nhật thành công ✅");
+				alert("Cập nhật thành công ");
 			}
 			finally {
 				btn.disabled = false;
 				btn.textContent = oldText;
 				document.getElementById("logoFile").value = "";
+			}
+		}
+		async function changePassword(oldPassword, newPassword, confirmPassword) {
+			const token = getToken();
+			if (!isValidJwt(token)) {
+				localStorage.removeItem("token");
+				goLogin();
+				return;
+			}
+
+			const res = await safeFetch(`${API_BASE}/api/auth/change-password`, {
+				method: "PUT",
+				headers: {
+					Authorization: `Bearer ${token}`,
+					"Content-Type": "application/json",
+					Accept: "application/json"
+				},
+				body: JSON.stringify({
+					oldPassword,
+					newPassword,
+					confirmPassword
+				})
+			});
+
+			const json = await res.json().catch(() => ({}));
+
+			if (res.status === 401) {
+				localStorage.removeItem("token");
+				goLogin();
+				return;
+			}
+
+			if (!res.ok) {
+				// BE của bạn trả {success:false, message:"..."} hoặc {message:"..."}
+				throw new Error(json?.message || json?.Message || "Đổi mật khẩu thất bại");
+			}
+
+			return json;
+		}
+
+		function resetChangePasswordForm() {
+			const f = document.getElementById("changePasswordForm");
+			if (f) f.reset();
+		}
+
+		async function onSubmitChangePassword(e) {
+			e.preventDefault();
+
+			const oldPassword = (document.getElementById("oldPassword")?.value || "").trim();
+			const newPassword = (document.getElementById("newPassword")?.value || "").trim();
+			const confirmPassword = (document.getElementById("confirmPassword")?.value || "").trim();
+
+			if (!oldPassword || !newPassword || !confirmPassword) {
+				alert("Vui lòng nhập đủ 3 trường mật khẩu.");
+				return;
+			}
+			if (newPassword !== confirmPassword) {
+				alert("Xác nhận mật khẩu không khớp.");
+				return;
+			}
+			if (oldPassword === newPassword) {
+				alert("Mật khẩu mới phải khác mật khẩu cũ.");
+				return;
+			}
+
+			const btn = document.getElementById("btnChangePassword");
+			const oldText = btn?.textContent || "Changed Password";
+			if (btn) {
+				btn.disabled = true;
+				btn.textContent = "Changing...";
+			}
+
+			try {
+				await changePassword(oldPassword, newPassword, confirmPassword);
+				alert("Đổi mật khẩu thành công ✅");
+				resetChangePasswordForm();
+			} catch (err) {
+				console.error(err);
+				alert(err?.message || "Đổi mật khẩu thất bại");
+			} finally {
+				if (btn) {
+					btn.disabled = false;
+					btn.textContent = oldText;
+				}
 			}
 		}
 
@@ -599,6 +698,10 @@
 			// nếu bạn vẫn bọc trong form, chặn submit luôn
 			const form = btn?.closest("form");
 			if (form) form.addEventListener("submit", onSaveProvider);
+			// Change Password submit
+			const cpForm = document.getElementById("changePasswordForm");
+			if (cpForm) cpForm.addEventListener("submit", onSubmitChangePassword);
+
 		});
 	</script>
 
